# genaiz_cds

./: .gitignore  LICENSE  README.md  changelog.txt  pyproject.toml  requirements.freeze.txt  requirements.txt
distribution/: genaiz_clinical_data_standard-0.9.0-py3-none-any.whl
doc/: GenAIz_clinical_data_standard.docx
src/genaiz_clinical_data_standard/: cli-check.py  cli-convert.py  gcds.py  gcds_utils.py
src/genaiz_clinical_data_standard/ml_utils/: cli-force.py  cli-mega.py  cli-merge.py  cli-mm.py  cli-numericize.py  cli-scale.py  merge.py  numericize.py  scale.py
tests/: test_gcds.py  test_gcds_utils.py  test_merge.py  test_numericize.py  test_scale.py
tests/data/: megadata.csv  readwrite.csv  readwrite_path.csv  readwrite_path.json  readwrite_sparse.csv
