[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
 
[project]
name = "genaiz_clinical_data_standard"
version = "0.9.0"
authors = [
  { name="GENAIZ", email="rnd@genaiz.com" },
]
description = "GENAIZ clinical data standard, python implementation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
 
[project.urls]
"Homepage" = "https://www.genaiz.com"
"Bug Tracker" = "https://www.genaiz.com"